--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="Styles/portfolio-style.css">
     <title>My Portfolio</title>
 </head>
-<body>
-    <header></header>
+
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-tittle">Ka<span class="kam">mr</span>ul</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <!-- banner -->
+            <div class="banner-content">
+                <!-- banner content -->
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
+                <h1 class="banner-tittle"> Md Kamrul Islam </h1>
+                <p banner-description> Lorem ipsum dolor sit amet. <br>
+                    Lorem ipsum dolor sit amet.<br> Lorem ipsum
+                    dolor sit amet. </p>
+                <button class="btn-primary">View CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="dp" src="images/hardy.png" alt="">
+        </div>
+    </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
-    
+
 </body>
+
 </html>
