landing page designed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-tittle">Ka<span class="kam">mr</span>ul</h3>
             <ul>
@@ -35,14 +35,106 @@
                 <button class="btn-primary">View CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="dp" src="images/hardy.png" alt="">
+            <img class="dp" src="images/mydp.png" alt="">
         </div>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-tittle">About Me</h3>
+            <p class="section-description">Hello, This is Md Kamrul Islam, Based in Dhaka,
+                Bangladesh. Currently pursuing a BSc in Computing and Information Systems
+                with major in Artificial Intelligence in IoT at Daffodil International
+                University. I have a strong foundation in programming languages like C
+                and C++, Java, as well as in data structures and algorithms.
+                Additionally, I have more skills in web design and development,
+                working with PHP for backend programming and MySQL databases
+                to create dynamic and interactive websites. Gained valuable
+                experience working on the Fiverr marketplace, where I achieved
+                a Level 1 seller profile and maintained a 5-star rating. </p>
 
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-tittle">Name</p>
+                    <p class="item-description">Md Kamrul Islam</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-tittle">Email</p>
+                    <p class="item-description">islam.kamrul@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-tittle">Date of Birth</p>
+                    <p class="item-description">12 November, 1999</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-tittle">From</p>
+                    <p class="item-description">Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
+        <!-- what i do section start -->
+        <section class="skill">
+            <h3 class="section-tittle text-center">What I Do</h3>
+            <p class="section-description text-center">Lorem ipsum, dolor
+                sit amet consectetur adipisicing elit. Sint optio, hic
+                mollitia quae magnam dolor nihil fuga distinctio eligendi
+                et omnis, accusantium temporibus ab ducimus odio molestias
+                amet eius possimus tempore, fugiat saepe? Eaque nesciunt
+                cupiditate nemo odio necessitatibus. Totam placeat quidem
+                officiis beatae.</p>
+        </section>
+        <div class="skills-container">
+            <div class="skills">
+                <img src="images/icons/js.png" alt="">
+                <h4 class="skill-tittle">Vanilla JavaScript</h4>
+                <p class="skills-description">List skill/technologies here.
+                    You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+            <div class="skills">
+                <img src="images/icons/react.png" alt="">
+                <h4 class="skill-tittle">React</h4>
+                <p class="skills-description">List skill/technologies here.
+                    You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+            <div class="skills">                <img src="images/icons/nodejs.png" alt="">
+                <h4 class="skill-tittle">Node.js</h4>
+                <p class="skills-description">List skill/technologies here.
+                    You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+            <div class="skills">
+                <img src="images/icons/mongo.png" alt="">
+                <h4 class="skill-tittle">MongoDB</h4>
+                <p class="skills-description">List skill/technologies here.
+                    You can change the icon above to any of the 1500+
+                    FontAwesome 5 free icons available.
+                    Aenean commodo ligula eget dolor.</p>
+                </div>
+        </div>
     </main>
-    <footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
+        <h3 class="section-title">Let's Connect</h3>
+        <p>Please fill out the form on this section to contact with me or call 
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="images/icons/insta.png" alt=""></a>
+        </div>
 
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 
 </body>
